--- a/.github/workflows/deploy-to-firebase.yml
+++ b/.github/workflows/deploy-to-firebase.yml
@@ -1,9 +1,5 @@
 name: Build and Deploy
-on:
-  push:
-    branches:
-      - master
-
+on: [push] 
 jobs:
   build:
     name: Build
@@ -14,7 +10,7 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Build
-        run: npm run build-prod
+        run: npm run build
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
